--- a/pages/findEmoAction.html
+++ b/pages/findEmoAction.html
@@ -24,22 +24,22 @@
                             <div class="progress bg-gray-300" style="height: 2px;">
                                 <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 60%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                                <span class="d-block">1</span>
-                            </div>
-                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                                <span class="d-block">2</span>
-                            </div>
-                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                                <span class="d-block">3</span>
-                            </div>
-                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                            <a class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" id="tooltip" href="myEmoCardsHolder.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="我的情緒卡夾">
+                                <span class="d-block" style="cursor: pointer;">1</span>
+                            </a>
+                            <a class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" id="tooltip" href="myEmoCardsHolder.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="1st情緒強度">
+                                <span class="d-block" style="cursor: pointer;">2</span>
+                            </a>
+                            <a class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" id="tooltip" href="findEmoBackground.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="背景篇">
+                                <span class="d-block" style="cursor: pointer;">3</span>
+                            </a>
+                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-main-tint01 border-2 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="行動篇">
                                 <span class="d-block">4</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="2nd情緒強度">
                                 <span class="d-block">5</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="感謝自我">
                                 <span class="d-block">6</span>
                             </div>
                         </div>
@@ -242,6 +242,16 @@
     const isGoodResultLabels = document.querySelectorAll('#isGoodResultLabel');
     const betterActionLabel = document.querySelector('#betterActionLabel');
     const betterAction = document.querySelector('#betterAction');
+    const tooltips = document.querySelectorAll('#tooltip');
+    // 預防頁面跳轉
+    window.onbeforeunload = function () {
+        return "Are you really sure?";
+    }
+    tooltips.forEach(function(tooltip, i){
+        tooltip.addEventListener('click',function(){
+            window.onbeforeunload = false;
+        })
+    })
     // 取得local storage 資料
     let storageData;
     let storageCards;
@@ -273,14 +283,14 @@
     }
 
     // 將情緒名詞寫入文句中
-    axios.get("https://api.wavemocards.com/emotions?require=cards")
+    axios.get("https://api.wavemocards.com/emoinfo/cards/")
     .then(function(response){
         let aryData = Object.values(response.data);
         let strWhatIDid = "";
         let cardsNum = storageCards.length;
         let cardNames = [];
         storageCards.forEach(function(card, i){
-            cardNames.push(card.Name);
+            cardNames.push(card.name);
         })
         if(cardsNum==1){
             strWhatIDid = `
@@ -329,6 +339,7 @@
         storageData[1].betterAction = betterAction.value;
         let stringAddedCard = JSON.stringify(storageData);
         localStorage.setItem("addedCards", stringAddedCard);
+        window.onbeforeunload = false;
         location.href = "findEmoBackground.html";
     })
 
@@ -341,6 +352,7 @@
         storageData[1].betterAction = betterAction.value;
         let stringAddedCard = JSON.stringify(storageData);
         localStorage.setItem("addedCards", stringAddedCard);
+        window.onbeforeunload = false;
         location.href = "findEmoStrength2nd.html";
     })
   </script>
