--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -25,22 +25,22 @@
                                 <div class="progress bg-gray-300" style="height: 2px;">
                                     <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-outline-main-tint01 border-2 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="我的情緒卡夾">
                                     <span class="d-block">1</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="1st情緒強度">
                                     <span class="d-block">2</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="背景篇">
                                     <span class="d-block">3</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="行動篇">
                                     <span class="d-block">4</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="2nd情緒強度">
                                     <span class="d-block">5</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="感謝自我">
                                     <span class="d-block">6</span>
                                 </div>
                             </div>
@@ -51,10 +51,11 @@
                     <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                         <h2 class="fs-3">我的情緒卡夾</h2>
                         <div class="nav-btn d-flex justify-content-end">
-                            <a class="btn btn-outline-main-tint01 c-btn c-btn-outline-main-tint01 text-nowrap d-flex justify-content-center align-items-center" href="findEmoCards.html">
+                            <button type="button" class="btn btn-outline-main-tint01 c-btn c-btn-outline-main-tint01 text-nowrap d-flex justify-content-center align-items-center" id="btnReset" data-bs-toggle="modal" data-bs-target="#modalReset">清空</button>
+                            <button type="button" class="ms-16 btn btn-outline-main-tint01 c-btn c-btn-outline-main-tint01 text-nowrap d-flex justify-content-center align-items-center" id="btnBack">
                                 <span class="d-none d-sm-block">回到情緒卡</span>
                                 <span class="d-sm-none">上一步</span>
-                            </a>
+                            </button>
                             <button type="button" class="ms-16 px-md-24 btn btn-main c-btn text-nowrap d-flex justify-content-center align-items-center" id="btnNext">下一步</button>
                         </div>
                     </div>
@@ -132,6 +133,28 @@
             </div>
         </div>
 
+        <!-- 確認是否要 清空 卡片 Modal -->
+        <div class="modal fade" id="modalReset" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4">
+                    <div class="modal-body d-flex flex-column align-items-center px-48 pt-24 pb-16">
+                        <p id="modalResetTitle" class="mb-12 fs-3 fw-bold text-pink">確定要清空嗎？</p>
+                        <div class="d-flex flex-column">
+                            <p id="modalResetText1" class="d-none mt-4 fs-7 text-pink">點擊確定後，將會<span class="px-2 fw-bold">移除所有卡片</span>，並且無法復原。</p>
+                        </div>
+                        <div style="width: 45%;">
+                            <img class="w-100 pt-24 pb-2" src="../assets/images/sureToDelete.svg" alt="img" id="modalResetImg">
+                        </div>
+                        <span class="text-gray-400 fs-11">Illustration by <a class="link-gray-400" href="https://blush.design/artists/RyUTVuP8G4QeAAEEQgug/pablo-stanley">Pablo Stanley</a> from <a class="link-gray-400" href="https://blush.design/">blush design</a></span>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <button type="button" id="modalResetClose" class="me-16 c-btn-outline-pink-tint01 fs-6" data-bs-dismiss="modal">取消</button>
+                        <button type="button" id="modalResetSure" class="btn btn-pink c-btn px-24 py-8 link-white fs-6 rounded-pill">確定</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- 卡片數量錯誤 Modal -->
         <div class="modal fade" id="modalNextErr" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
@@ -159,6 +182,10 @@
 
         <%- include('./layout/baseJs'); -%>
         <script>
+            // 預防頁面跳轉
+            window.onbeforeunload = function () {
+                return "Are you really sure?";
+            }
             const btnNext = document.querySelector('#btnNext');
             const cardsList = document.querySelector('#cardsList');
             const listModal = document.querySelector('.listModal');
@@ -183,7 +210,8 @@
                 storageData = [{cards:[]}];
                 storageCards = storageData[0].cards;
             }
-            axios.get("https://api.wavemocards.com/emotions?require=cards")
+            console.log(storageData);
+            axios.get("https://api.wavemocards.com/emoinfo/cards/")
             .then(function(response){
                 let aryData = Object.values(response.data); // 轉成「陣列」
                 // cards 卡片列
@@ -193,7 +221,11 @@
                 initCardsAndModals();
                 function initCardsAndModals(){
                     storageCards.forEach(function(card, i){
-                        let category = aryData[card.ID-1].Category;
+                        let category = aryData[card.ID-1].category;
+                        let cardName = card.name;
+                        let cardId = card.ID;
+                        let cardDescription = card.description;
+                        let cardExample = card.example;
                         if(category == "快樂") {
                             emo = "happy";
                         } else if (category == "期待") {
@@ -214,14 +246,14 @@
                             emo = "others";
                         }
 
-                        if(card.Name.length>2){
+                        if(cardName.length>2){
                             let contentCards = `
                             <div class="position-relative me-36 mb-20" id="cardBox"">
-                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-m" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${card.ID}</div></button>
+                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-m" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${cardId}</div></button>
                                 <button type="button" class="class-card mb-12 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                                    <p>${card.Name}</p>
+                                    <p>${cardName}</p>
                                     <div class="img-box">
-                                        <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                        <img src="./upload/${cardId}.svg" alt="${cardName}">
                                     </div>
                                 </button>
                             </div>`;
@@ -229,11 +261,11 @@
                         } else {
                             let contentCards = `
                                 <div class="position-relative me-36 mb-20" id="cardBox">
-                                    <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-m" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${card.ID}</div></button>
+                                    <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-m" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${cardId}</div></button>
                                     <button type="button" class="class-card mb-12 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                                        <p>${card.Name[0]}&nbsp;${card.Name[1]}</p>
+                                        <p>${cardName[0]}&nbsp;${cardName[1]}</p>
                                         <div class="img-box">
-                                            <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                            <img src="./upload/${cardId}.svg" alt="${cardName}">
                                         </div>
                                     </button>
                                 </div>`;
@@ -246,27 +278,27 @@
                                     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
                                         <div class="modal-content bg-${emo} my-36">
                                             <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
-                                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-xl" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${card.ID}</div></button>
+                                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-delete-card-xl" id="btnDelete" data-bs-toggle="modal" data-bs-target="#modalDelete"><div class="d-none">${cardId}</div></button>
                                                 <div class="box-bigCard-text">
                                                     <div class="d-flex d-md-none w-100 justify-content-center">
                                                         <div class="d-sm-none box-bigCard-img mb-8">
-                                                            <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                                            <img class="w-100" src="./upload/${cardId}.svg" alt="${cardName}">
                                                         </div>
                                                     </div>
                                                     <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                                                        <h2>${card.Name}</h2>
+                                                        <h2>${cardName}</h2>
                                                     </div>
                                                     <div class="mb-16">
                                                         <h3 class="mb-4">意思：</h3>
-                                                        <p>${card.Description}</p>
+                                                        <p>${cardDescription}</p>
                                                     </div>
                                                     <div>
                                                         <h3 class="mb-4">例句：</h3>
-                                                        <p>${card.Example}</p>
+                                                        <p>${cardExample}</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-none d-sm-block box-bigCard-img">
-                                                    <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                                    <img class="w-100" src="./upload/${cardId}.svg" alt="${cardName}">
                                                 </div>
                                             </div>
                                         </div>
@@ -330,9 +362,28 @@
                         // 將資料 轉為 string 資料，並將 aryAddedCards 存入 localStorage 中
                         let stringAddedCard = JSON.stringify(storageData);
                         localStorage.setItem("addedCards", stringAddedCard);
+                        window.onbeforeunload = false;
                         location.href = "findEmoStrength1st.html";
                     }
                 })
+            })
+
+            // 回到情緒卡，location導向
+            let pageLocation = localStorage.getItem("location");
+            const btnBack = document.querySelector('#btnBack');
+            btnBack.addEventListener("click", function(){
+                window.onbeforeunload = false;
+                location.href = pageLocation;
+            })
+
+            // 清空所有卡片
+            const modalResetSure = document.querySelector("#modalResetSure");
+            const modalResetClose = document.querySelector("#modalResetClose");
+            modalResetSure.addEventListener("click", function(){
+                localStorage.removeItem("addedCards");
+                modalResetClose.click();
+                window.onbeforeunload = false;
+                location.href = "myEmoCardsHolder.html";
             })
         </script>
     </body>
