--- a/findEmoThanks.html
+++ b/findEmoThanks.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-53ce6bfa.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-2af72cda.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-7c511c4c.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-70ca0eec.css">
     </head>
     <body>
         <div class="" id="top"></div>
@@ -57,7 +57,7 @@
                 <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的紀錄與分析">我的紀錄</a>
             </li>
             <!-- <li class="ms-16">
                 <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a> -->
@@ -88,22 +88,22 @@
                                 <div class="progress bg-gray-300" style="height: 2px;">
                                     <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 100%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="我的情緒卡夾">
                                     <span class="d-block">1</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="1st情緒強度">
                                     <span class="d-block">2</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="背景篇">
                                     <span class="d-block">3</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="行動篇">
                                     <span class="d-block">4</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="2nd情緒強度">
                                     <span class="d-block">5</span>
                                 </div>
-                                <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-main-tint01 border-2 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="感謝自我">
                                     <span class="d-block">6</span>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                 <ul>
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
-                            <span>Product Manager</span>
+                            <span>Project Manager</span>
                             <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
@@ -204,6 +204,12 @@
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
+                            <span class="mt-4 d-block text-end">Leon Wu</span>
+                        </a>
+                    </li>
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                            <span>System Designer</span>
                             <span class="mt-4 d-block text-end">Leon Wu</span>
                         </a>
                     </li>
