--- a/findEmoStrength1st.html
+++ b/findEmoStrength1st.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-53ce6bfa.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2af72cda.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-7c511c4c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-70ca0eec.css">
   </head>
   <body>
     <div class="" id="top"></div>
@@ -57,7 +57,7 @@
                 <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的紀錄與分析">我的紀錄</a>
             </li>
             <!-- <li class="ms-16">
                 <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a> -->
@@ -88,22 +88,22 @@
                             <div class="progress bg-gray-300" style="height: 2px;">
                                 <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 20%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                                <span class="d-block">1</span>
-                            </div>
-                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                            <a class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center" id="tooltip" href="myEmoCardsHolder.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="我的情緒卡夾">
+                                <span class="d-block" style="cursor: pointer;">1</span>
+                            </a>
+                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-main-tint01 border-2 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="1st情緒強度">
                                 <span class="d-block">2</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="背景篇">
                                 <span class="d-block">3</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="行動篇">
                                 <span class="d-block">4</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="2nd情緒強度">
                                 <span class="d-block">5</span>
                             </div>
-                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center" data-bs-toggle="tooltip" data-bs-placement="bottom" title="感謝自我">
                                 <span class="d-block">6</span>
                             </div>
                         </div>
@@ -284,7 +284,7 @@
                 <ul>
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
-                            <span>Product Manager</span>
+                            <span>Project Manager</span>
                             <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
@@ -315,6 +315,12 @@
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
+                            <span class="mt-4 d-block text-end">Leon Wu</span>
+                        </a>
+                    </li>
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                            <span>System Designer</span>
                             <span class="mt-4 d-block text-end">Leon Wu</span>
                         </a>
                     </li>
@@ -372,10 +378,20 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script>
+        const tooltips = document.querySelectorAll('#tooltip');
         const btnBack = document.querySelector('#btnBack');
         const btnNext = document.querySelector('#btnNext');
         const strengthArea =document.querySelector('#strengthArea');
         const listModal = document.querySelector('.listModal');
+        // 預防頁面跳轉
+        window.onbeforeunload = function () {
+            return "Are you really sure?";
+        }
+        tooltips.forEach(function(tooltip, i){
+            tooltip.addEventListener('click',function(){
+                window.onbeforeunload = false;
+            })
+        })
         // 抓 local storage 的 卡片資料
         let storageData;
         let storageCards;
@@ -383,7 +399,7 @@
         storageData=JSON.parse(getAddedCards);
         storageCards=storageData[0].cards;
         // 將卡片資料印到版面上
-        axios.get("https://api.wavemocards.com/emotions?require=cards")
+        axios.get("https://api.wavemocards.com/emoinfo/cards/")
         .then(function(response){
             let aryData = Object.values(response.data);
             let strCards = "";
@@ -392,7 +408,7 @@
             initCardsAndModals();
             function initCardsAndModals(){
                 storageCards.forEach(function(card, i){
-                    let category = aryData[card.ID-1].Category;
+                    let category = aryData[card.ID-1].category;
                     if(category == "快樂") {
                         emo = "happy";
                     } else if (category == "期待") {
@@ -413,13 +429,13 @@
                         emo = "others";
                     }
 
-                    if(card.Name.length>2){
+                    if(card.name.length>2){
                         let contentCards = `
                         <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                             <button type="button" class="class-card mb-md-0 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                                <p>${card.Name}</p>
+                                <p>${card.name}</p>
                                 <div class="img-box">
-                                    <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                    <img src="./upload/${card.ID}.svg" alt="${card.name}">
                                 </div>
                             </button>
                             <div class="box-strength d-flex justify-content-between align-items-center">
@@ -465,9 +481,9 @@
                         let contentCards = `
                             <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                                 <button type="button" class="class-card mb-md-0 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                                    <p>${card.Name[0]}&nbsp;${card.Name[1]}</p>
+                                    <p>${card.name[0]}&nbsp;${card.name[1]}</p>
                                     <div class="img-box">
-                                        <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                        <img src="./upload/${card.ID}.svg" alt="${card.name}">
                                     </div>
                                 </button>
                                 <div class="box-strength d-flex justify-content-between align-items-center">
@@ -520,23 +536,23 @@
                                             <div class="box-bigCard-text">
                                                 <div class="d-flex d-md-none w-100 justify-content-center">
                                                     <div class="d-sm-none box-bigCard-img mb-8">
-                                                        <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                                        <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.name}">
                                                     </div>
                                                 </div>
                                                 <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                                                    <h2>${card.Name}</h2>
+                                                    <h2>${card.name}</h2>
                                                 </div>
                                                 <div class="mb-16">
                                                     <h3 class="mb-4">意思：</h3>
-                                                    <p>${card.Description}</p>
+                                                    <p>${card.description}</p>
                                                 </div>
                                                 <div>
                                                     <h3 class="mb-4">例句：</h3>
-                                                    <p>${card.Example}</p>
+                                                    <p>${card.example}</p>
                                                 </div>
                                             </div>
                                             <div class="d-none d-sm-block box-bigCard-img">
-                                                <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                                <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.name}">
                                             </div>
                                         </div>
                                     </div>
@@ -592,6 +608,7 @@
                 storageData[0].cards=storageCards;
                 let stringAddedCard = JSON.stringify(storageData);
                 localStorage.setItem("addedCards", stringAddedCard);
+                window.onbeforeunload = false;
                 location.href = "myEmoCardsHolder.html";
             })
             // 確認是否都已選填，並將更新後的資料寫入localStorage
@@ -613,6 +630,7 @@
                     storageData[0].cards=storageCards;
                     let stringAddedCard = JSON.stringify(storageData);
                     localStorage.setItem("addedCards", stringAddedCard);
+                    window.onbeforeunload = false;
                     location.href = "findEmoBackground.html";
                 }
             })
