--- a/findEmoUnstable.html
+++ b/findEmoUnstable.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-53ce6bfa.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2af72cda.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-7c511c4c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-70ca0eec.css">
   </head>
   <body>
     <div class="" id="top"></div>
@@ -57,7 +57,7 @@
                 <a href="findMyEmotions.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="選擇情緒卡與紀錄情緒">探索情緒</a>
             </li>
             <li class="ms-16">
-                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
+                <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的紀錄與分析">我的紀錄</a>
             </li>
             <!-- <li class="ms-16">
                 <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a> -->
@@ -85,8 +85,8 @@
                 <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                     <h2 class="fs-3">不安</h2>
                     <div class="nav-btn d-flex justify-content-end">
-                        <a class="btn btn-outline-main c-btn" href="findEmoCards.html">返回</a>
-                        <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
+                        <a class="btn btn-outline-main c-btn" id="btnBack" href="findEmoCards.html">返回</a>
+                        <a class="ms-16 btn btn-main c-btn btn-goToMyCards" id="myEmoCardsHolder" href="myEmoCardsHolder.html">
                             <i class="bi bi-folder2"></i>
                             <i class="bi bi-folder2-open"></i>
                             <span class="ms-4">我的情緒卡夾</span>
@@ -232,7 +232,7 @@
                 <ul>
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
-                            <span>Product Manager</span>
+                            <span>Project Manager</span>
                             <span class="mt-4 d-block text-end">Shu-Ping Yu</span>
                         </a>
                     </li>
@@ -263,6 +263,12 @@
                     <li class="mb-8">
                         <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
+                            <span class="mt-4 d-block text-end">Leon Wu</span>
+                        </a>
+                    </li>
+                    <li class="mb-8">
+                        <a class="d-lg-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
+                            <span>System Designer</span>
                             <span class="mt-4 d-block text-end">Leon Wu</span>
                         </a>
                     </li>
@@ -2326,10 +2332,14 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script>
-        const unstableCards = document.querySelector('#unstableCards');
+        // 追蹤頁面足跡
+        let pageLocation = "findEmoUnstable.html";
+        localStorage.setItem("location", pageLocation);
+        
+        const cards = document.querySelector('#unstableCards');
         const listModal = document.querySelector('.listModal');
 
-        axios.get("http://api2.wavemocards.com/emotions?require=cards")
+        axios.get("https://api.wavemocards.com/emoinfo/cards/")
             .then(function(response){
                 let aryData = Object.values(response.data); // 轉成「陣列」
                 let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
@@ -2338,76 +2348,68 @@
                     aryData[i].id= aryIds[i];
                 }
 
-            // 展開卡
+            // 展開卡 & 大卡
             initCards()
             function initCards() {
-                let strCardsUnstable = "";
+                let strCards = "";
                 let strModal = "";
                 let emo;
                 aryData.forEach(function(data, i){
-                    if(data.Category == "不安"){
+                    let dataName = data.name;
+                    let dataId = data.ID;
+                    let dataDescription = data.description;
+                    let dataExample = data.example;
+                    if(data.category == "不安"){
                         emo = "unstable";
                         let contentCards = `
-                        <div class="position-relative me-48 mb-24">
-                            <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-add-card-m" id="btnAdd"><div class="d-none">${data.ID}</div></button>
-                            <button type="button" class="class-card mb-12 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
-                                <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
-                                <div class="img-box">
-                                    <img src="./upload/${data.ID}.svg" alt="${data.Name}">
-                                </div>
-                            </button>
-                        </div>`;
-                        strCardsUnstable+=contentCards;
-                    }
-                })
-                unstableCards.innerHTML = strCardsUnstable;
-            }
+                            <div class="position-relative me-48 mb-24">
+                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-add-card-m" id="btnAdd"><div class="d-none">${data.ID}</div></button>
+                                <button type="button" class="class-card mb-12 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                                    <p>${dataName[0]}&nbsp;${dataName[1]}</p>
+                                    <div class="img-box">
+                                        <img src="./upload/${dataId}.svg" alt="${dataName }">
+                                    </div>
+                                </button>
+                            </div>`;
+                        strCards+=contentCards;
 
-            // 大情緒卡 Modal
-            initModal();
-            function initModal() {
-            let strModal = "";
-            let emo;
-            aryData.forEach(function(data, i){
-                if (data.Category == "不安") {
-                    emo = "unstable";
-                }
-                
-                let content = `
-                    <li>
-                        <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-                                <div class="modal-content bg-${emo} my-36">
-                                    <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
-                                        <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-add-card-xl" id="btnAdd"><div class="d-none">${data.ID}</div></button>
-                                        <div class="box-bigCard-text">
-                                            <div class="d-flex d-md-none w-100 justify-content-center">
-                                                <div class="d-sm-none box-bigCard-img mb-8">
-                                                    <img class="w-100" src="./upload/${data.ID}.svg" alt="${data.Name}">
+                        let contentModal = `
+                            <li>
+                                <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                                        <div class="modal-content bg-${emo} my-36">
+                                            <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
+                                                <button type="button" class="position-absolute top-0 start-100 translate-middle rounded-circle border-0 btn-add-card-xl" id="btnAdd"><div class="d-none">${dataId}</div></button>
+                                                <div class="box-bigCard-text">
+                                                    <div class="d-flex d-md-none w-100 justify-content-center">
+                                                        <div class="d-sm-none box-bigCard-img mb-8">
+                                                            <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
+                                                        </div>
+                                                    </div>
+                                                    <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+                                                        <h2>${dataName}</h2>
+                                                    </div>
+                                                    <div class="mb-16">
+                                                        <h3 class="mb-4">意思：</h3>
+                                                        <p>${dataDescription}</p>
+                                                    </div>
+                                                    <div>
+                                                        <h3 class="mb-4">例句：</h3>
+                                                        <p>${dataExample}</p>
+                                                    </div>
+                                                </div>
+                                                <div class="d-none d-sm-block box-bigCard-img">
+                                                    <img class="w-100" src="./upload/${dataId}.svg" alt="${dataName}">
                                                 </div>
                                             </div>
-                                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
-                                                <h2>${data.Name}</h2>
-                                            </div>
-                                            <div class="mb-16">
-                                                <h3 class="mb-4">意思：</h3>
-                                                <p>${data.Description}</p>
-                                            </div>
-                                            <div>
-                                                <h3 class="mb-4">例句：</h3>
-                                                <p>${data.Example}</p>
-                                            </div>
-                                        </div>
-                                        <div class="d-none d-sm-block box-bigCard-img">
-                                            <img class="w-100" src="./upload/${data.ID}.svg" alt="${data.Name}">
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </li>`;
-                    strModal+=content;
+                            </li>`;
+                        strModal+=contentModal;
+                    }
                 })
+                cards.innerHTML = strCards;
                 listModal.innerHTML = strModal;
             }
 
@@ -2422,11 +2424,13 @@
                     let cardInfo = aryData[id-1];
 
                     // 取得 localStorage stringAddedCards 的資料
-                    let storageCards;
+                    let storageData; // local storage 全部的資料
+                    let storageCards; // 存放 local storage 中的 card 資料
                     let getAddedCards = localStorage.getItem("addedCards");
                     let hadThisCard; // 判別是否已有此卡
                     if(getAddedCards!=null){
-                        storageCards=JSON.parse(getAddedCards); // 將 string 資料轉為 array 資料
+                        storageData=JSON.parse(getAddedCards); // 將 string 資料轉為 array 資料
+                        storageCards=storageData[0].cards;
                         // 檢查此卡片是否已被放入 localStorage
                         storageCards.forEach(function(card, index){
                         if(cardInfo.ID==card.ID){
@@ -2435,7 +2439,8 @@
                     })
                     } else {
                         // storageCards 尚未被定義，因此 定義成array格式，後續才能將卡片資料新增進入array中
-                        storageCards=[];
+                        storageData=[{cards:[]}];
+                        storageCards=storageData[0].cards;
                     }
                     if(hadThisCard==true){
                         // 失敗 Modal
@@ -2465,12 +2470,29 @@
                         btnAdd.setAttribute("data-bs-target", "#modalResult");
                         btnAdd.click(); // 設定該按鈕被點擊
                         storageCards.push(cardInfo);
+                        storageData[0].cards=storageCards;
                         // 將資料 轉為 string 資料
-                        let stringAddedCard = JSON.stringify(storageCards);
+                        let stringAddedCard = JSON.stringify(storageData);
                         // 將 aryAddedCards 存入 localStorage 中
                         localStorage.setItem("addedCards", stringAddedCard);
                     }
                 })
+            })
+
+            // 防止頁面移轉
+            window.onbeforeunload = function () {
+                return "Are you really sure?";
+            }
+            const myEmoCardsHolder = document.querySelector('#myEmoCardsHolder');
+            myEmoCardsHolder.addEventListener('click', function(e){
+                window.onbeforeunload = false;
+            })
+            const btnBack = document.querySelector('#btnBack');
+            btnBack.addEventListener("click", function(){
+                window.onbeforeunload = false;
+            })
+            modalResultLink.addEventListener("click", function(){
+                window.onbeforeunload = false;
             })
         })
     </script>
